--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="hero-image">
                         <div class="hero-text">
                           <h1>SF WISP</h1>
-                          <p>Worlds highest product</p>
+                          <p>The worlds most powerful wifi configuration tool. </p>
                           <button>learn more</button>
                         </div>
                 </div>
@@ -50,13 +50,37 @@
                 </div>
             </div>
         </section>
+    <!--Portal-->
+        <section class="features">
+            <div class="container">
+                <div align="center">
+                    <h2>SF WISP - Portal.</h2>
+                    <h4>The smart way to imporve onboard wifi experience</h4>
+                </div>
+                <img class="featuresImg" src="assets/portal.png" alt="portal">
+                    <div class="row">
+                            <div class="col-md-4">
+                                <h4>Fully responsive</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                            </div>
+                            <div class="col-md-4">
+                                <h4>Easy to configure</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                            </div>
+                            <div class="col-md-4">
+                                <h4>Clean desing</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                            </div>
+                    </div>
+            </div>
+        </section>
 
     <!--features1-->
         <section class="features">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8">
-                        <h3> Control over product</h3>
+                        <h3>Control over product</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae, 
                             recusandae unde architecto quo quam. Odit doloremque enim minus dolore quasi asperiores 
                             laboriosam temporibus est eligendi ipsum. Quae, architecto quis?</p>
@@ -92,7 +116,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8">
-                            <h3> Flexibility </h3>
+                            <h3>Satisfied passengers = +$ </h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae, 
                                 recusandae unde architecto quo quam. Odit doloremque enim minus dolore quasi asperiores 
                                 laboriosam temporibus est eligendi ipsum. Quae, architecto quis?</p>
@@ -105,22 +129,47 @@
 
                 </div>
         </section>
+
+    <!--ADMIN-->
+        <section class="features">
+            <div class="container">
+                <div align="center">
+                    <h2>SF WISP - Admin.</h2>
+                    <h4>The worlds most powerful wifi configuration tool.</h4>
+                </div>
+                <img class="featuresImg" src="assets/features/wispadmin2.png" alt="ADMIN">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h4>Empower your team with unlimited product configurations.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Empower your team with unlimited product configurations.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Empower your team with unlimited product configurations.</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     
     <!--features Sum-->
         <section class="featuresSum">
                     <div class="row">
-                            <div class="col-md-6 featuresSumImg">
-                                <img src="assets/features/features-sum.png" alt="">
+                            <div class="col-md-6">
+                                <img   class="wispadminPic"src="assets/features/wispadmin.png" alt="admin">
                             </div>
                             <div class="col-md-6">
-                                <h3>All done from our Awsome admins tool!</h3> 
+                                <h3>Beyond Your Expectation</h3> 
                                 <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</h6>
                                 <div class="row featureItem">
                                     <div class="col-md-2">
                                         <img class="featuresImgSum" src="assets/features/png-icon.png" alt="">
                                     </div>
                                     <div class="col-md-10">
-                                        <h4>Feature</h4>
+                                        <h5>Proven market succsess</h5>    
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
                                     </div>
                                 </div>
@@ -129,7 +178,7 @@
                                             <img class="featuresImgSum" src="assets/features/png-icon.png" alt="">
                                         </div>
                                         <div class="col-md-10">
-                                            <h4>Feature</h4>
+                                            <h5>Proven market succsess</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
                                         </div>
                                 </div>
@@ -138,7 +187,7 @@
                                             <img class="featuresImgSum" src="assets/features/png-icon.png" alt="">
                                         </div>
                                         <div class="col-md-10">
-                                            <h4>Feature</h4>
+                                            <h5>Proven market succsess</h5>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
                                         </div>
                                 </div>
@@ -147,41 +196,6 @@
                     </div>
         </section>
 
-    <!--Beyond Your Expectation-->
-        <section class="features">
-            <div class="container">
-                <h3>Beyond Your Expectation</h3>
-                <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING ELIT. DONEC PELLENTESQUE EFFICITUR TURPIS, VITAE DICTUM DOLOR TRISTIQUE IN.</p>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h4>Fully responsive</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Easy to configure</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>Clean desing</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <h4>Well documented</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
-                    </div>
-                     <div class="col-md-4">
-                        <h4>Proven market succsess</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <h4>best best best</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <!--Powering-->
         <section class="features">
