--- a/features.html
+++ b/features.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!--icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
-
+    <!--Font-->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
 
 </head>
@@ -36,10 +38,12 @@
             </div>
         </div>
     </nav>
-    <!--hero section -->
+    <!--hero section-->
     <section>
-        <div class="container">
-            <h1>Everything you need to build intelligent, sophisticated internet connection packages.</h1>
+        <div class="hero-image-2">
+            <div class="hero-text">
+                <h1>Everything you need to build intelligent, sophisticated internet connection packages.</h1>
+            </div>
         </div>
     </section>
 
@@ -47,6 +51,10 @@
     <section class="features">
         <div class="container">
             <h4>Portal Features</h4>
+            <div class="lineBreak"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, <br>
+                laborum delectus id numquam hic voluptatem perspiciatis modi quos!</p>
+                
             <div class="row">
                 <div class="col-md-4">
                     <p>
@@ -119,7 +127,31 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ab, eveniet earum molestias dignissimos.</p>
                     </div>
     
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <p>
+                        <i class="fab fa-angellist"></i>
+                        <strong>My account</strong>
+                    </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ab, eveniet earum molestias dignissimos.</p>
                 </div>
+                <div class="col-md-4">
+                    <p>
+                        <i class="fab fa-angellist"></i>
+                        <strong>FAQ</strong>
+                    </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ab, eveniet earum molestias dignissimos.</p>
+                </div>
+                <div class="col-md-4">
+                    <p>
+                        <i class="fab fa-angellist"></i>
+                        <strong>Contact</strong>
+                    </p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ab, eveniet earum molestias dignissimos.</p>
+                </div>
+
+        </div>
         </div>
     </section>
 
@@ -127,6 +159,9 @@
     <section class="features">
         <div class="container">
             <h4>Admin Features</h4>
+            <div class="lineBreak"></div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, <br>
+                laborum delectus id numquam hic voluptatem perspiciatis modi quos!</p>
             <div class="row">
                 <div class="col-md-4">
                     <p>
