--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+      <!--icons-->
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+      crossorigin="anonymous">
     <!--Font-->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
@@ -74,23 +77,28 @@
         <div class="container">
             <div align="center">
                 <h2>SF WISP - Portal.</h2>
+                <div class="lineBreakPortal"></div>
                 <h4>The smart way to improve onboard wifi experience</h4>
             </div>
             <img class="productImage" src="assets/portal.png" alt="portal">
             <div class="row featureRow">
                 <div class="col-md-4">
-                    <h4>Fully responsive</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
+                    
+                    <h4> Responsive</h4>
+                    <div class="lineBreakPortal"></div>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
                         cumque doloribus.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Easy to configure</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
+                    <h4>  Easy to configure</h4>
+                    <div class="lineBreakPortal"></div>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
                         cumque doloribus.</p>
                 </div>
                 <div class="col-md-4">
                     <h4>Clean desing</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
+                    <div class="lineBreakPortal"></div>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
                         cumque doloribus.</p>
                 </div>
             </div>
@@ -157,23 +165,27 @@
         <div class="container">
             <div align="center">
                 <h2>SF WISP - Admin.</h2>
+                <div class="lineBreak"></div>
                 <h4>The worlds most powerful wifi configuration tool.</h4>
             </div>
             <img class="productImage" src="assets/features/wispadmin2.png" alt="ADMIN">
             <div class="row featureRow">
                 <div class="col-md-4">
-                    <h4>Empower your team with unlimited product configurations.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
+                    <h4>  Empower your team with unlimited product configurations.</h4>
+                    <div class="lineBreak"></div>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
                         cumque doloribus.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Empower your team with unlimited product configurations.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
+                    <h4> Empower your team with unlimited product configurations.</h4>
+                    <div class="lineBreak"></div>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
                         cumque doloribus.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Empower your team with unlimited product configurations.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
+                    <h4> Empower your team with unlimited product configurations.</h4>
+                    <div class="lineBreak"></div>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
                         cumque doloribus.</p>
                 </div>
             </div>
