--- a/features.html
+++ b/features.html
@@ -7,13 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SF WISP</title>
 
-    <!--Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-        crossorigin="anonymous">
+   <!--Bootstrap html & CSS-->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+   crossorigin="anonymous">
+
+    <!--Internal stylesheets-->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="slider.css">
     <!--icons-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
-        crossorigin="anonymous">
+    crossorigin="anonymous">
     <!--Font-->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
@@ -286,6 +289,40 @@
         </div>
     </section>
 
+    <!--Clients slider-->
+    <section>
+            <div>
+                <h3>Powering some of the biggest airlines in the world!</h3>
+            </div>
+            <div class="customer-logos slider">
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="assets/partners/aa.jpeg">
+                </div>
+            </div>
+    
+        </section>
+
 
 
     <!-- Footer -->
@@ -421,7 +458,6 @@
         <!-- Footer Links -->
 
     </footer>
-    <!-- Footer -->
 
     <!--Botstrap JS and JQuery-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -430,6 +466,10 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
+
+    <!--Client slider-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
+    <script src="carousel.js"></script>
 </body>
 
 </html>
