--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Home
+                <a class="nav-item nav-link" href="index.html">Home
                     <span class="sr-only">(current)</span>
                 </a>
-                <a class="nav-item nav-link" href="#">Features</a>
+                <a class="nav-item nav-link" href="features.html">Features</a>
                 <a class="nav-item nav-link" href="#">About</a>
 
             </div>
@@ -242,8 +242,8 @@
 
     <!--Clients slider-->
     <section>
-        <div>
-            <h3>Powering some of the biggest airlines in the world!</h3>
+        <div  class="text-center">
+            <h4 class="marginTop">Powering some of the biggest airlines in the world!</h4>
         </div>
         <div class="customer-logos slider">
             <div class="slide">
@@ -285,7 +285,7 @@
 
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Snowfall AB</h6>
                     <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur
                         adipisicing elit.</p>
                 </div>
