--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!--Font-->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
+    
+
 </head>
 
 <body>
@@ -47,7 +49,7 @@
             <div class="hero-text">
                 <h1>SF WISP</h1>
                 <p>The worlds most powerful wifi configuration tool. </p>
-                <button>learn more</button>
+                <button id="button">learn more</button>
             </div>
         </div>
     </section>
@@ -76,7 +78,7 @@
         </div>
     </section>
     <!--Portal-->
-    <section class="features">
+    <section class="features" id="section1">
         <div class="container">
             <div align="center">
                 <h2>SF WISP - Portal.</h2>
@@ -408,8 +410,8 @@
     </footer>
 
     <!--Botstrap JS and JQuery-->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
@@ -419,6 +421,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
     <script src="carousel.js"></script>
 
+    <!--Click evenets-->
+    <script src="onClick.js"></script>
+    
 
 </body>
 
