--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <section>
         <div class="hero-image">
             <div class="hero-text">
-                <h1>SF WISP</h1>
-                <p>The worlds most powerful wifi configuration tool. </p>
+                <h1>The world leading platform for onboard connectivity</h1>
                 <button id="button">learn more</button>
             </div>
         </div>
@@ -58,22 +57,22 @@
     <section>
         <div class="row">
             <div class="col-md-2 partner">
-                <img class="partnerImg" src="assets/partners/sas.png" alt="sas">
+                <img class="partnerImg" src="assets/partners/American-Airlines.png" alt="sas">
             </div>
             <div class="col-md-2 partner">
-                <img class="partnerImg" src="assets/partners/klm.png" alt="klm">
+                <img class="partnerImg" src="assets/partners/American-Airlines.png" alt="klm">
             </div>
             <div class="col-md-2 partner">
-                <img class="partnerImg" src="assets/partners/aa.jpeg" alt="American airlines">
+                <img class="partnerImg" src="assets/partners/American-Airlines.png" alt="American airlines">
             </div>
             <div class="col-md-2 partner">
-                <img class="partnerImg" src="assets/partners/lufthansa.png" alt="lufthansa">
+                <img class="partnerImg" src="assets/partners/American-Airlines.png" alt="lufthansa">
             </div>
             <div class="col-md-2 partner">
-                <img class="partnerImg" src="assets/partners/united.png" alt="united">
+                <img class="partnerImg" src="assets/partners/American-Airlines.png" alt="united">
             </div>
             <div class="col-md-2 partner">
-                <img class="partnerImg" src="assets/partners/aircanada.png" alt="aircanada">
+                <img class="partnerImg" src="assets/partners/American-Airlines.png" alt="aircanada">
             </div>
         </div>
     </section>
@@ -83,28 +82,25 @@
             <div align="center">
                 <h2>SF WISP - Portal.</h2>
                 <div class="lineBreakPortal"></div>
-                <h4 class="marginTop">The smart way to improve onboard wifi experience</h4>
+                <h4 class="marginTop">Helping our customers increase end user satisfaction, usage and revenue</h4>
             </div>
             <img class="productImage" src="assets/portal.png" alt="portal">
             <div class="row featureRow">
                 <div class="col-md-4">
-
-                    <h4> Responsive</h4>
+                    
+                    <h4> White label <span></h4>
                     <div class="lineBreakPortal"></div>
-                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
-                        cumque doloribus.</p>
+                    <p class="marginTop">Quick and minimal setup, standard flows & features.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4> Easy to configure</h4>
+                    <h4> Airline customization</h4>
                     <div class="lineBreakPortal"></div>
-                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
-                        cumque doloribus.</p>
+                    <p class="marginTop">Tweaked to the needs and requirements of the airline.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4>Clean desing</h4>
+                    <h4>Customer development </h4>
                     <div class="lineBreakPortal"></div>
-                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
-                        cumque doloribus.</p>
+                    <p class="marginTop">API based for customer bespoke development</p>
                 </div>
             </div>
         </div>
@@ -114,14 +110,15 @@
     <section class="features">
         <div class="container">
             <div class="row">
-                <div class="col-md-8">
-                    <h3>Control over product</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae, recusandae unde architecto
+                <div class="col-md-8"> 
+                    <h3>Exceed End User Expectation</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae, recusandae unde architecto
                         quo quam. Odit doloremque enim minus dolore quasi asperiores laboriosam temporibus est eligendi ipsum.
                         Quae, architecto quis?</p>
+                    
                 </div>
                 <div class="col-md-4">
-                    <img class="featuresImg" src="assets/features/features2.png" alt="features1">
+                    <img class="featuresImg" src="assets/features/sf.png" alt="features1">
                 </div>
             </div>
 
@@ -133,13 +130,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="featuresImg" src="assets/features/features1.png" alt="features2">
+                    <img class="featuresImg" src="assets/features/sf.png" alt="features2">
                 </div>
                 <div class="col-md-8">
-                    <h3> Dynamic setup</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae, recusandae unde architecto
-                        quo quam. Odit doloremque enim minus dolore quasi asperiores laboriosam temporibus est eligendi ipsum.
-                        Quae, architecto quis?</p>
+                    <h3> Customized and optimized products</h3>
+                    <p>Granular product configurability based on customer type, frequent traveler, route etc. for increased customer satisfaction and optimized yield.</p>
                 </div>
             </div>
 
@@ -151,13 +146,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h3>Satisfied passengers = +$ </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus repudiandae, recusandae unde architecto
-                        quo quam. Odit doloremque enim minus dolore quasi asperiores laboriosam temporibus est eligendi ipsum.
-                        Quae, architecto quis?</p>
+                   <h3>Increase sales and revenues </h3>
+                    <p>Real time yield management based on various variables such as demand, customer behavior etc. Easy way of testing new product configurations, prices and more.</p>
                 </div>
                 <div class="col-md-4">
-                    <img class="featuresImg" src="assets/features/features3.png" alt="features3">
+                    <img class="featuresImg" src="assets/features/sf.png" alt="features3">
 
                 </div>
             </div>
@@ -176,22 +169,21 @@
             <img class="productImage" src="assets/features/wispadmin2.png" alt="ADMIN">
             <div class="row featureRow">
                 <div class="col-md-4">
-                    <h4> Empower your team with unlimited product configurations.</h4>
+                    <h4> Manage end user expectations </h4>
                     <div class="lineBreak"></div>
-                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
-                        cumque doloribus.</p>
+                    <p class="marginTop"> Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
                 </div>
                 <div class="col-md-4">
-                    <h4> Empower your team with unlimited product configurations.</h4>
+                    <h4>Utilize all upsell possibilities</h4>
                     <div class="lineBreak"></div>
-                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
-                        cumque doloribus.</p>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
                 </div>
                 <div class="col-md-4">
-                    <h4> Empower your team with unlimited product configurations.</h4>
+                    <h4>Hassle free payments</h4>
                     <div class="lineBreak"></div>
-                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id necessitatibus iure quod consequuntur, eum
-                        cumque doloribus.</p>
+                    <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
         </div>
@@ -205,36 +197,45 @@
             </div>
             <div class="col-md-6">
                 <h3>Beyond Your Expectation</h3>
-                <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</h6>
+                <div class="lineBreak"></div>
+                <p class="marginTop">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
                 <div class="row featureItem">
                     <div class="col-md-2">
-                        <img class="featuresImgSum" src="assets/features/png-icon.png" alt="">
+                        <img class="featuresImgSum" src="assets/icons/plane.png" alt="plane">
                     </div>
                     <div class="col-md-10">
                         <h5>Proven market succsess</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                        <ul>
+                            <li>Served x passengers to dat. </li>
+                            <li>Operational with x airlines to date. </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="row featureItem">
                     <div class="col-md-2">
-                        <img class="featuresImgSum" src="assets/features/png-icon.png" alt="">
+                        <img class="featuresImgSum" src="assets/icons/distrubute.png" alt="distrubute">
                     </div>
                     <div class="col-md-10">
-                        <h5>Proven market succsess</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                        <h5>Fast time to market</h5>
+                            <ul>
+                                <li>New feature development </li>
+                                <li>Maintenance & changes requests </li>
+                                <li>Build, release and deployment </li>
+                            </ul>
                     </div>
                 </div>
                 <div class="row featureItem">
                     <div class="col-md-2">
-                        <img class="featuresImgSum" src="assets/features/png-icon.png" alt="">
+                        <img class="featuresImgSum" src="assets/icons/idea.png" alt="bulb">
                     </div>
                     <div class="col-md-10">
-                        <h5>Proven market succsess</h5>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            <br> Id necessitatibus iure quod consequuntur, eum cumque doloribus.</p>
+                        <h5>High scalability</h5>
+                        <ul>
+                            <li>Across verticals</li>
+                            <li>Customized modules easily added</li>
+                            <li>Multitenancy</li>
+                        </ul>
                     </div>
                 </div>
 
@@ -249,28 +250,28 @@
         </div>
         <div class="customer-logos slider">
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
             <div class="slide">
-                <img src="assets/partners/aa.jpeg">
+                <img src="assets/partners/American-Airlines.png">
             </div>
         </div>
 
@@ -299,16 +300,16 @@
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
                     <p>
-                        <a href="#!">MDBootstrap</a>
+                        <a href="#!">Link</a>
                     </p>
                     <p>
-                        <a href="#!">MDWordPress</a>
+                        <a href="#!">Link</a>
                     </p>
                     <p>
-                        <a href="#!">BrandFlow</a>
+                        <a href="#!">Link</a>
                     </p>
                     <p>
-                        <a href="#!">Bootstrap Angular</a>
+                        <a href="#!">Link</a>
                     </p>
                 </div>
                 <!-- Grid column -->
@@ -319,16 +320,16 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
                     <p>
-                        <a href="#!">Your Account</a>
+                        <a href="#!">Link</a>
                     </p>
                     <p>
-                        <a href="#!">Become an Affiliate</a>
+                        <a href="#!">Link</a>
                     </p>
                     <p>
-                        <a href="#!">Shipping Rates</a>
+                        <a href="#!">Link</a>
                     </p>
                     <p>
-                        <a href="#!">Help</a>
+                        <a href="#!">Link</a>
                     </p>
                 </div>
 
